@@ -4,6 +4,7 @@ Version 1.0 - Wed, 11 May 2016 10:40:56 -0500
   - Added function to drop successfully archived tiers.
   - Fixed issue with `migrate_tier_data` when called without a partition.
   - Added necessary documentation.
+  - New partitions now retain ownership of root table.
 Version 0.2 - Thu, 19 Nov 2015 10:55:43 -0600
   - Renamed to tab_tier to avoid collisions with official pg_* names.
   - Added pre-index data copy optimization for day-level granularity.
